--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,11 @@ homepage: https://github.com/alexeynobody/flutter-app-environment
 environment:
   sdk: '>=2.19.2 <3.0.0'
 
-dependencies: null
+dependencies:
+  json_annotation: ^4.8.0
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   dart_code_metrics: ^5.6.0
-  lints: ^2.0.1
+  flutter_lints: ^2.0.1
