--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_app_environment
-description: Simple solution to handle environment variables using `.json` file.
+description: Simple solution to handle environment variables using `.json` or config in entrypoint file.
 version: 1.0.0
 homepage: https://github.com/alexeynobody/flutter-app-environment
 
