--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,7 @@ analyzer:
     - '**.g.dart'
     - '**.mocks.dart'
     - '**.freezed.dart'
+    - 'example'
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
