--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,19 +13,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
       - uses: subosito/flutter-action@v2.5.0
         with:
           channel: 'stable'
           cache: true
 
       - name: 'Get dependencies'
-        run: dart pub get
+        run: flutter pub get
 
       - name: 'Check code style'
-        run: dart format --set-exit-if-changed .
+        run: flutter format --set-exit-if-changed .
 
       - name: 'Analyze'
-        run: dart analyze
+        run: flutter analyze
 
       - name: 'Dart Code Metrics - Reports code metrics, rules and anti-patterns violations.'
-        run: dart run dart_code_metrics:metrics analyze lib
+        run: flutter pub run dart_code_metrics:metrics analyze lib
