--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -1,4 +1,4 @@
-include: package:flutter_lints/flutter.yaml
+include: package:lints/recommended.yaml
 
 analyzer:
   plugins:
@@ -7,7 +7,6 @@ analyzer:
     - '**.g.dart'
     - '**.mocks.dart'
     - '**.freezed.dart'
-    - 'example'
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
