--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
-      - uses: subosito/flutter-action@v2.5.0
+      - uses: subosito/flutter-action@v2.8.0
         with:
           channel: 'stable'
           cache: true
@@ -33,3 +33,19 @@ jobs:
 
       - name: 'Dart Code Metrics - Reports code metrics, rules and anti-patterns violations.'
         run: flutter pub run dart_code_metrics:metrics analyze lib
+  
+  pana:
+    name: pana
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2.8.0
+
+      - name: Install Dependencies
+        run: |
+          flutter packages get
+          flutter pub global activate pana
+          sudo apt-get install webp
+      - name: Verify Pub Score
+        run: ../../tool/verify_pub_score.sh
