fix Verify Pub Score step in dev workflow

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -48,4 +48,4 @@ jobs:
           flutter pub global activate pana
           sudo apt-get install webp
       - name: Verify Pub Score
-        run: ../tool/verify_pub_score.sh
+        run: tool/verify_pub_score.sh
