--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: '11'
-      - uses: subosito/flutter-action@v2.8.0
+          java-version: '17'
+      - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           cache: true
@@ -26,13 +26,10 @@ jobs:
         run: flutter pub get
 
       - name: 'Check code style'
-        run: flutter format --set-exit-if-changed .
+        run: dart format --set-exit-if-changed .
 
       - name: 'Analyze'
         run: flutter analyze
-
-      - name: 'Dart Code Metrics - Reports code metrics, rules and anti-patterns violations.'
-        run: flutter pub run dart_code_metrics:metrics analyze lib
   
   package-analysis:
     name: package points
