--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -38,18 +38,18 @@ analyzer:
     throw_in_finally: error
     unnecessary_statements: error
     unrelated_type_equality_checks: error
-    unsafe_html: error
     use_build_context_synchronously: error
     use_key_in_widget_constructors: error
     valid_regexps: error
 
+formatter:
+  trailing_commas: automate
+
 linter:
   rules:
-    # Const rules.
-    prefer_const_constructors: true
-    prefer_const_constructors_in_immutables: true
-    prefer_const_declarations: true
-    prefer_const_literals_to_create_immutables: true
+    strict_top_level_inference: true
+    unnecessary_underscores: true
+    avoid_futureor_void: true
     unnecessary_const: true
     unnecessary_late: true
 
@@ -78,14 +78,13 @@ linter:
     throw_in_finally: true
     unnecessary_statements: true
     unrelated_type_equality_checks: true
-    unsafe_html: true
     use_build_context_synchronously: true
     use_key_in_widget_constructors: true
     valid_regexps: true
 
     # Style rules.
     always_declare_return_types: true
-    always_put_control_body_on_new_line: false
+    always_put_control_body_on_new_line: true
     always_put_required_named_parameters_first: true
     always_specify_types: false
     annotate_overrides: true
@@ -98,7 +97,7 @@ linter:
     avoid_equals_and_hash_code_on_mutable_classes: true
     avoid_escaping_inner_quotes: true
     avoid_field_initializers_in_const_classes: true
-    avoid_final_parameters: true
+    avoid_final_parameters: false
     avoid_function_literals_in_foreach_calls: true
     avoid_implementing_value_types: true
     avoid_init_to_null: true
@@ -151,7 +150,6 @@ linter:
     join_return_with_assignment: false
     leading_newlines_in_multiline_strings: true
     library_annotations: true
-    library_names: true
     library_prefixes: true
     library_private_types_in_public_api: true
     lines_longer_than_80_chars: false
@@ -170,8 +168,6 @@ linter:
     one_member_abstracts: false
     only_throw_errors: true
     overridden_fields: true
-    package_api_docs: true
-    package_prefixed_library_names: true
     parameter_assignments: true
     prefer_adjacent_string_concatenation: true
     prefer_asserts_in_initializer_lists: true
@@ -181,10 +177,12 @@ linter:
     prefer_constructors_over_static_methods: true
     prefer_contains: true
     prefer_double_quotes: false
+    prefer_equal_for_default_values: true
     prefer_expression_function_bodies: false
     prefer_final_fields: true
     prefer_final_in_for_each: true
     prefer_final_locals: true
+    prefer_final_parameters: false
     prefer_for_elements_to_map_fromIterable: true
     prefer_foreach: true
     prefer_function_declarations_over_variables: true
@@ -209,7 +207,7 @@ linter:
     provide_deprecation_message: true
     public_member_api_docs: false
     recursive_getters: true
-    require_trailing_commas: false
+    require_trailing_commas: true
     secure_pubspec_urls: true
     sized_box_for_whitespace: true
     sized_box_shrink_expand: true
