--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_app_environment
 description: Simple solution to handle environment variables using `.json` or
   config in entrypoint file.
-version: 1.0.4
+version: 2.0.0
 homepage: https://github.com/alexeynobody/flutter-app-environment
 
 environment:
@@ -14,3 +14,5 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
