--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: flutter_app_environment
-description: Simple solution to handle environment variables using `.json` or
-  config in entrypoint file.
+description: Simple solution to manage environment variables using `.json` or `.env` files.
 version: 2.0.0
 homepage: https://github.com/alexeynobody/flutter-app-environment
 
