v2: Unified Init, .env Support, and Improved Error Handling (#11)
* refactor environment type string conversion, and enhance environment loading error handling

* refine linter rules and formatting in analysis_options.yaml

* remove entrypoint environment initialization methods

* minimum iOS example version has been raised to 13.0, linter rules have been updated, and similar changes have been made

* unify environment initialization into a single generic `Environment.init` method

* removed unused dependencies

* add .env file support

* update exported files, add missed exceptions

* add an Environment reset method

* add tests

* update Code Quality Workflow

* bump to 2.0.0

* update documentation

* update changelog

* format example

* remove extraneous backtick from README.md

* update README.md

* update README and description on pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_app_environment
-description: Simple solution to handle environment variables using `.json` or
-  config in entrypoint file.
-version: 1.0.4
+description: Simple solution to manage environment variables using `.json` or `.env` files.
+version: 2.0.0
 homepage: https://github.com/alexeynobody/flutter-app-environment
 
 environment:
@@ -11,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
